--- a/boilerplates/fe-react/files/package.json
+++ b/boilerplates/fe-react/files/package.json
@@ -10,12 +10,10 @@
     "connected-react-router": "^4.3.0",
     "eslint-plugin-react": "^7.9.1",
     "history": "^4.7.2",
-    "node-sass-chokidar": "^1.3.0",
     "prop-types": "15.6.2",
     "querystring": "^0.2.0",
     "react": "16.4.2",
     "react-dom": "16.4.2",
-    "react-loadable": "^5.4.0",
     "react-redux": "5.0.7",
     "react-router-dom": "4.2.2",
     "react-router-redux": "^4.0.8",
@@ -27,18 +25,13 @@
   },
   "devDependencies": {
     "eslint-plugin-jest": "^22.0.0",
-    "npm-run-all": "^4.1.3",
     "redux-devtools": "3.4.1",
     "source-map-explorer": "^1.6.0"
   },
   "scripts": {
     "analyze": "source-map-explorer build/static/js/main.*",
-    "build-css": "node-sass-chokidar src/ -o src/",
-    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
-    "start-js": "react-scripts start",
-    "start": "PORT=8080 NODE_ENV=development npm-run-all -p watch-css start-js",
-    "build-js": "react-scripts build",
-    "build": "npm-run-all build-css build-js",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "lint": "eslint src"
@@ -47,7 +40,6 @@
     "react",
     "redux",
     "create-react-app",
-    "react-loadable",
     "react-redux",
     "react-router",
     "redux-observable",
