--- a/boilerplates/e2e-cypress/files/package.json
+++ b/boilerplates/e2e-cypress/files/package.json
@@ -7,23 +7,23 @@
     "build": "tsc --project .",
     "watch": "npm-run-all --parallel \"build -- --watch\" \"cypress:open\"",
     "e2e": "npm run e2e-at https://domain.com",
-    "e2e-at": "npm-run-all build \"cypress:run -- --browser chrome --config videoRecording=false,baseUrl={1}\" --",
+    "e2e-at": "npm-run-all build \"cypress:run -- --browser chrome --config video=false,baseUrl={1}\" --",
     "cypress:open": "cypress open",
-    "cypress:run": "cypress run --config videoRecording=false",
+    "cypress:run": "cypress run --config video=false",
     "all": "npm-run-all lint build cypress:run"
   },
   "private": true,
   "dependencies": {
-    "rxjs": "^6.2.1"
+    "rxjs": "^6.3.3"
   },
   "devDependencies": {
     "@types/node": "^8.9.4",
-    "cypress": "2.1.0",
+    "cypress": "3.1.2",
     "npm-run-all": "^4.1.3",
     "rxjs-tslint": "^0.1.5",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.10.0",
+    "ts-node": "^7.0.1",
+    "tslint": "~5.11.0",
     "tslint-language-service": "^0.9.9",
-    "typescript": "~2.7.2"
+    "typescript": "~3.1.6"
   }
 }
