adding SERVER_SIGNATURE in rshiny-app.yml so to have a default proposal for nginx server signature name

--- a/ocp-templates/templates/rshiny-app.yml
+++ b/ocp-templates/templates/rshiny-app.yml
@@ -122,6 +122,8 @@ objects:
         - env:
           - name: SERVICE
             value: ${COMPONENT}.${PROJECT}-${ENV}.svc.cluster.local
+          - name: SERVER_SIGNATURE
+            value: ${PROJECT}-${COMPONENT}
           - name: CROWD_REALM_NAME
             value: ${CROWD_REALM_NAME}
           - name: CROWD_URL
