--- a/boilerplates/jupyter-notebook/files/docker/jupyter_notebook_config.json
+++ b/boilerplates/jupyter-notebook/files/docker/jupyter_notebook_config.json
@@ -2,7 +2,7 @@
   "NotebookApp": {
     "token": "",
     "ip": "0.0.0.0",
-    "notebook_dir": "/opt/app-root/src/work",
+    "notebook_dir": "/app/src/work",
     "port": 8080,
     "open_browser": false
   }
