--- a/rundeck-jobs/common/prepare-continuous-integration.yaml
+++ b/rundeck-jobs/common/prepare-continuous-integration.yaml
@@ -56,6 +56,7 @@
         nodeStep: 'true'
     - description: add Jenkinsfile to generated project
       script: |-
+        sudo mkdir -p @option.quickstarter_directory@
         sudo chown @globals.rundeck_os_user@ -R @option.quickstarter_directory@
         cd /tmp/rundeck_@job.id@_@job.execid@/ods-project-quickstarters/boilerplates 
         ./renderJenkinsTemplate.sh \
