updating to latest DSI

--- a/boilerplates/ds-ml-service/files/docker-prediction/Dockerfile
+++ b/boilerplates/ds-ml-service/files/docker-prediction/Dockerfile
@@ -23,6 +23,7 @@ COPY dist /app
 
 USER root
 
+# Is needed that the special user (1001) needed for starting python servers has the permissions
 RUN chgrp -R 0 /app && \
     chmod -R g=u /app && \
     chmod +x /app/run.sh && \
