docker-compose and jenkinsfile helper update

--- a/boilerplates/ds-ml-service/files/docker-compose.yml
+++ b/boilerplates/ds-ml-service/files/docker-compose.yml
@@ -8,10 +8,10 @@ services:
       context: docker-prediction
     environment:
       DSI_TRAINING_BASE_URL: http://training:8080
-      DSI_TRAINING_SERVICE_USERNAME: THIS_PARAMETER_SHOULD_BE_NOT_COMMITED
-      DSI_TRAINING_SERVICE_PASSWORD: THIS_PARAMETER_SHOULD_BE_NOT_COMMITED
-      DSI_PREDICTION_SERVICE_USERNAME: THIS_PARAMETER_SHOULD_BE_NOT_COMMITED
-      DSI_PREDICTION_SERVICE_PASSWORD: THIS_PARAMETER_SHOULD_BE_NOT_COMMITED
+      DSI_TRAINING_SERVICE_USERNAME: dsitraining
+      DSI_TRAINING_SERVICE_PASSWORD: dsitraining123
+      DSI_PREDICTION_SERVICE_USERNAME: dsiprediction
+      DSI_PREDICTION_SERVICE_PASSWORD: dsiprediction123
     ports:
       - "8081:8080"
     networks:
@@ -21,14 +21,14 @@ services:
     build:
       context: docker-training
     environment:
-      DSI_EXECUTE_ON: LOCAL # LOCAL or SSH
-      DSI_SSH_HOST: THIS_PARAMETER_SHOULD_BE_NOT_COMMITED
-      DSI_TRAINING_SERVICE_USERNAME: THIS_PARAMETER_SHOULD_BE_NOT_COMMITED
-      DSI_TRAINING_SERVICE_PASSWORD: THIS_PARAMETER_SHOULD_BE_NOT_COMMITED
-      DSI_SSH_USERNAME: THIS_PARAMETER_SHOULD_BE_NOT_COMMITED
-      DSI_SSH_PASSWORD: THIS_PARAMETER_SHOULD_BE_NOT_COMMITED
-      DSI_SSH_HTTP_PROXY: THIS_PARAMETER_SHOULD_BE_NOT_COMMITED
-      DSI_SSH_HTTPS_PROXY: THIS_PARAMETER_SHOULD_BE_NOT_COMMITED
+      DSI_EXECUTE_ON: SSH # LOCAL or SSH
+      DSI_SSH_HOST: my.remote.ssh.server.com
+      DSI_TRAINING_SERVICE_USERNAME: dsitraining
+      DSI_TRAINING_SERVICE_PASSWORD: dsitraining123
+      # DSI_SSH_USERNAME: THIS_VALUE_SHOULD_BE_NOT_COMMITTED
+      # DSI_SSH_PASSWORD: THIS_VALUE_SHOULD_BE_NOT_COMMITTED
+      # DSI_SSH_HTTP_PROXY: THIS_VALUE_SHOULD_BE_NOT_COMMITTED
+      # DSI_SSH_HTTPS_PROXY: THIS_VALUE_SHOULD_BE_NOT_COMMITTED
     ports:
       - "8080:8080"
     networks:
