--- a/boilerplates/ds-ml-service/files/docker-training/Dockerfile
+++ b/boilerplates/ds-ml-service/files/docker-training/Dockerfile
@@ -1,32 +1,31 @@
 FROM registry.access.redhat.com/rhscl/python-36-rhel7
 
-ARG NEXUS_USERNAME
-ARG NEXUS_PASSWORD
-ARG NEXUS_URL
+ARG nexus_username
+ARG nexus_password
+ARG nexus_url
 WORKDIR /app
 
-# From load pip install, miniconda download for caching docker build layers
-
+ENV DSI_MINICONDA_PACKAGE_VERSION="3.6.0"
 ENV DSI_MINICONDA_PACKAGE_PATH=/app/miniconda3.sh
 ENV PYTHONPATH=$PYTHONPATH:/app
 ENV DSI_PACKAGE=/app/app.tar.gz
 
-ENV NEXUS_USERNAME=$NEXUS_USERNAME
-ENV NEXUS_PASSWORD=$NEXUS_PASSWORD
-ENV NEXUS_URL=$NEXUS_URL
+ENV NEXUS_USERNAME=$nexus_username
+ENV NEXUS_PASSWORD=$nexus_password
+ENV NEXUS_URL=$nexus_url
 
-COPY dist/run.sh /app/run.sh
+# Front load pip install, miniconda download for caching docker build layers
 COPY dist/requirements.txt /app
 
 USER root
 
-RUN curl --silent --fail https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh --output ${DSI_MINICONDA_PACKAGE_PATH}
+RUN curl --silent --fail https://repo.anaconda.com/miniconda/Miniconda3-${DSI_MINICONDA_PACKAGE_VERSION}-Linux-x86_64.sh --output ${DSI_MINICONDA_PACKAGE_PATH}
 
 USER 1001
 
 RUN pip install --upgrade pip && \
-    if [[ ! -z ${NEXUS_URL} ]]; \
-    then pip install -i https://${NEXUS_USERNAME}:${NEXUS_PASSWORD}@${NEXUS_URL:8}/repository/pypi-all/simple -r requirements.txt; \
+    if [[ ! -z ${nexus_url} ]]; \
+    then pip install -i https://${nexus_username}:${nexus_password}@${nexus_url:8}/repository/pypi-all/simple -r requirements.txt; \
     else pip install -r requirements.txt; \
     fi
 
@@ -35,7 +34,7 @@ COPY dist /app
 
 USER root
 
-# Is needed that the special user (1001) needed for starting python servers has the permissions
+# Is needed that the special user (1001) has the permissions for starting python servers
 RUN chgrp -R 0 /app && \
     chmod -R g=u /app && \
     chmod +x /app/run.sh && \
