--- a/boilerplates/ds-ml-service/files/docker-compose.yml
+++ b/boilerplates/ds-ml-service/files/docker-compose.yml
@@ -21,14 +21,9 @@ services:
     build:
       context: docker-training
     environment:
-      DSI_EXECUTE_ON: SSH # LOCAL or SSH
-      DSI_SSH_HOST: my.remote.ssh.server.com
+      DSI_EXECUTE_ON: LOCAL # LOCAL or SSH
       DSI_TRAINING_SERVICE_USERNAME: dsitraining
       DSI_TRAINING_SERVICE_PASSWORD: dsitraining123
-      # DSI_SSH_USERNAME: THIS_VALUE_SHOULD_BE_NOT_COMMITTED
-      # DSI_SSH_PASSWORD: THIS_VALUE_SHOULD_BE_NOT_COMMITTED
-      # DSI_SSH_HTTP_PROXY: THIS_VALUE_SHOULD_BE_NOT_COMMITTED
-      # DSI_SSH_HTTPS_PROXY: THIS_VALUE_SHOULD_BE_NOT_COMMITTED
     ports:
       - "8080:8080"
     networks:
