--- a/boilerplates/be-docker-plain/sonar-project.properties
+++ b/boilerplates/be-docker-plain/sonar-project.properties
@@ -5,7 +5,10 @@ sonar.projectKey=@project_id@-@component_id@
 sonar.projectName=@project_id@-@component_id@
 
 # Comma-separated paths to directories with sources (required)
-sonar.sources=docker
+sonar.sources=docker,src
+
+# change to your programming language 
+# sonar.language=
 
 # Encoding of the source files (optional but recommended as default is ASCII)
 sonar.sourceEncoding=UTF-8
