--- a/jenkins-slaves/maven/ocp-config/bc.yml
+++ b/jenkins-slaves/maven/ocp-config/bc.yml
@@ -33,6 +33,13 @@ objects:
     strategy:
       dockerStrategy:
         dockerfilePath: Dockerfile.rhel7
+        env:
+          - name: NEXUS_HOST
+            value: ${NEXUS_URL}
+          - name: NEXUS_USERNAME
+            value: ${NEXUS_USERNAME}
+          - name: NEXUS_PASSWORD
+            value: ${NEXUS_PASSWORD}
         from:
           kind: ImageStreamTag
           name: jenkins-slave-base:latest
@@ -40,4 +47,10 @@ objects:
     triggers: []
 parameters:
 - name: REPO_BASE
+  required: true
+- name: NEXUS_URL
+  required: true
+- name: NEXUS_USERNAME
+  required: true
+- name: NEXUS_PASSWORD
   required: true
